--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,43 +5,18 @@ services:
       context: ./
     image: qkd_ssh_image
     container_name: ssh_server
-    ports:
-      - "${SERVER_PORT:-2222}:22"
+    network_mode: host
     extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - SSH_PORT=${SERVER_PORT:-2222}
-      - QKD_ENC_IPPORT=${QKD_ENC_IPPORT:-172.17.0.1:6600}
-      - QKD_DEC_IPPORT=${QKD_DEC_IPPORT:-172.17.0.1:6600}
-      - QKD_ENC_SAE_ID=${QKD_ENC_SAE_ID:-precisB-qssh}
-      - QKD_DEC_SAE_ID=${QKD_DEC_SAE_ID:-rectorat-qssh}
-      - QKD_ENC_KME=${QKD_ENC_KME:-rectorat/qssh}
-      - QKD_DEC_KME=${QKD_DEC_KME:-precisB/qssh}
-      - SELF_REPORTING=${SELF_REPORTING:-true}
-      - REPORT_ENDPOINT=${REPORT_ENDPOINT:-http://host.docker.internal:18080/update-app}
-      - REPORTING_NAME=${REPORTING_NAME:-qssh}
-      - REPORT_TRUST_SELF_SIGNED=${REPORT_TRUST_SELF_SIGNED:-true}
-      - REPORT_TOKEN=${REPORT_TOKEN:-abc}
+      - "host.docker.internal:127.0.0.1"
+    env_file:
+      - server.env
   client:
     image: qkd_ssh_image
     container_name: ssh_client
     depends_on:
       - server
-    ports:
-      - "${CLIENT_PORT:-2223}:22"
+    network_mode: host
     extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - SSH_PORT=${CLIENT_PORT:-2223}
-      - QKD_ENC_IPPORT=${QKD_ENC_IPPORT:-172.17.0.1:6600}
-      - QKD_DEC_IPPORT=${QKD_DEC_IPPORT:-172.17.0.1:6600}
-      - QKD_ENC_SAE_ID=${QKD_ENC_SAE_ID:-precisB-qssh}
-      - QKD_DEC_SAE_ID=${QKD_DEC_SAE_ID:-rectorat-qssh}
-      - QKD_ENC_KME=${QKD_ENC_KME:-rectorat/qssh}
-      - QKD_DEC_KME=${QKD_DEC_KME:-precisB/qssh}
-      - SELF_REPORTING=${SELF_REPORTING:-true}
-      - REPORT_ENDPOINT=${REPORT_ENDPOINT:-http://host.docker.internal:18080/update-app}
-      - REPORTING_NAME=${REPORTING_NAME:-qssh}
-      - REPORT_TRUST_SELF_SIGNED=${REPORT_TRUST_SELF_SIGNED:-true}
-      - REPORT_TOKEN=${REPORT_TOKEN:-abc}
-
+      - "host.docker.internal:127.0.0.1"
+    env_file:
+      - client.env
